--- a/index.html
+++ b/index.html
@@ -3,17 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minthra's Website Testing</title>
+    <title>My Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .navbar {
+            background-color: #333;
+            color: white;
+            padding: 15px;
             text-align: center;
-            margin-top: 20%;
-            font-size: 24px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .profile-img {
+            width: 100px;
+            height: 100px;
+            border-radius: 60%;
+            margin-right: 15px;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        .portfolio a {
+            display: block;
+            margin: 5px 0;
+            color: #007bff;
+            text-decoration: none;
+        }
+        .portfolio a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <h1>Minthra's Website Testing</h1>
+
+    <div class="navbar">
+        <img src="woman.png" alt="Profile Picture" class="profile-img">
+        <div>
+            <h1>Minthra Khounsavath</h1>
+            <h2>Bachelor of Science in Data Science</h2>
+						<h3>Charlotte, NC</h3>
+        </div>
+    </div>
+
+    <div class="container">
+         <!-- About Me Section -->
+    <section class="about">
+			<h2>About Me</h2>
+			<p>Hello! My name is Minthra! Mint for short, and I am a senior at UNC Charlotte currently pursuing a Bachelor of Science in Data Science. I have a strong interest in utilizing data to solve complex problems and drive meaningful insights across various domains.</p>
+			<p>This webpage is designed to showcase my various projects and accomplishments throughout my studies. Here, you will find detailed insights into the skills I’ve developed, the tools I’ve learned, and the projects that reflect my commitment to making a difference through data.</p>
+			<p>Thank you for visiting, and I hope you enjoy exploring my work!</p>
+			<p><a href="https://www.all-things-mint.com/academic-portfolio" target="_blank">View My Full Portfolio</a></p>
+	</section>
+    </div>
+
+    <div class="container portfolio">
+        <h2>Portfolio</h2>
+        <h3>Project 1</h3>
+        <a href="https://minthra.github.io/Portfolio-Website/202510_Spring_2025_ITCS_3162_001_Introduction_to_Data_Mining_Project1.pdf
+"				target="_blank">Download PDF</a>
+        <a href="https://minthra.github.io/Portfolio-Website/Project1.ipynb" target="_blank">View Jupyter Notebook</a>
+    </div>
+
 </body>
 </html>
