Updated index.html for project 2

--- a/index.html
+++ b/index.html
@@ -52,27 +52,30 @@
         <div>
             <h1>Minthra Khounsavath</h1>
             <h2>Bachelor of Science in Data Science</h2>
-						<h3>Charlotte, NC</h3>
+            <h3>Charlotte, NC</h3>
         </div>
     </div>
 
     <div class="container">
-         <!-- About Me Section -->
-    <section class="about">
-			<h2>About Me</h2>
-			<p>Hello! My name is Minthra! Mint for short, and I am a senior at UNC Charlotte currently pursuing a Bachelor of Science in Data Science. I have a strong interest in utilizing data to solve complex problems and drive meaningful insights across various domains.</p>
-			<p>This webpage is designed to showcase my various projects and accomplishments throughout my studies. Here, you will find detailed insights into the skills I’ve developed, the tools I’ve learned, and the projects that reflect my commitment to making a difference through data.</p>
-			<p>Thank you for visiting, and I hope you enjoy exploring my work!</p>
-			<p><a href="https://www.all-things-mint.com/academic-portfolio" target="_blank">View My Full Portfolio</a></p>
-	</section>
+        <section class="about">
+            <h2>About Me</h2>
+            <p>Hello! My name is Minthra! Mint for short, and I am a senior at UNC Charlotte currently pursuing a Bachelor of Science in Data Science. I have a strong interest in utilizing data to solve complex problems and drive meaningful insights across various domains.</p>
+            <p>This webpage is designed to showcase my various projects and accomplishments throughout my studies. Here, you will find detailed insights into the skills I’ve developed, the tools I’ve learned, and the projects that reflect my commitment to making a difference through data.</p>
+            <p>Thank you for visiting, and I hope you enjoy exploring my work!</p>
+            <p><a href="https://www.all-things-mint.com/academic-portfolio" target="_blank">View My Full Portfolio</a></p>
+        </section>
     </div>
 
     <div class="container portfolio">
         <h2>Portfolio</h2>
+        
         <h3>Project 1</h3>
-        <a href="https://minthra.github.io/Portfolio-Website/202510_Spring_2025_ITCS_3162_001_Introduction_to_Data_Mining_Project1.pdf
-"				target="_blank">Download PDF</a>
+        <a href="https://minthra.github.io/Portfolio-Website/202510_Spring_2025_ITCS_3162_001_Introduction_to_Data_Mining_Project1.pdf" target="_blank">Download PDF</a>
         <a href="https://minthra.github.io/Portfolio-Website/Project1.ipynb" target="_blank">View Jupyter Notebook</a>
+        
+        <h3>Project 2</h3>
+        <a href="https://minthra.github.io/Portfolio-Website/Project2.pdf" target="_blank">Download PDF</a>
+        <a href="https://minthra.github.io/Portfolio-Website/Project2.ipynb" target="_blank">View Jupyter Notebook</a>
     </div>
 
 </body>
