updated  index.html  for dataset

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         <h3>Project 2</h3>
         <a href="https://minthra.github.io/Portfolio-Website/Project2.pdf" target="_blank">Download PDF</a>
         <a href="https://minthra.github.io/Portfolio-Website/Project2.ipynb" target="_blank">View Jupyter Notebook</a>
+         <a href="https://www.kaggle.com/datasets/purusinghvi/email-spam-classification-dataset?resource=download" target="_blank">Download Dataset</a>
+        
     </div>
 
 </body>
