--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
         <a href="https://minthra.github.io/Portfolio-Website/Project2.pdf" target="_blank">Download PDF</a>
         <a href="https://minthra.github.io/Portfolio-Website/Project2.ipynb" target="_blank">View Jupyter Notebook</a>
          <a href="https://www.kaggle.com/datasets/purusinghvi/email-spam-classification-dataset?resource=download" target="_blank">Download Dataset</a>
-        
+        <h3>Regression Project 3</h3>
+        <a href="https://minthra.github.io/Portfolio-Website/Project3.pdf" target="_blank">Download PDF</a>
+        <a href="https://minthra.github.io/Portfolio-Website/Project3.ipynb" target="_blank">View Jupyter Notebook</a>
     </div>
 
 </body>
